--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     width: 100%;
     height: 100vh;
-    background: coral;
+    background: white;
     font-family: 'Courier New', Courier, monospace;
     box-sizing: border-box;
 }
@@ -11,6 +11,30 @@ body {
     display: grid;
     align-items: center;
     justify-items: center;
+}
+
+button {
+    background: rgb(233, 233, 233);
+    font-family: inherit;
+    cursor: pointer;
+    margin: 10px;
+    min-width: 70px;
+    padding: 3px 5px;
+    color: black;
+    text-decoration: none;
+    border: 2px solid black;
+    border-radius: 3px;
+}
+
+button:hover {
+    color: white;
+    background: rgb(78, 78, 78);
+}
+
+button:active {
+    background: white;
+    color: black;
+    transform: scale(1.05);
 }
 
 #board-container {
